hid the Bandcamp icon

--- a/src/index.html
+++ b/src/index.html
@@ -537,10 +537,10 @@
 			<div class="social">
 				<div class="social-label">Follow:</div>
 				<div class="social-icons">
-					<a
+					<!-- <a
 						title="Dimmu Saurus Bandcamp page"
 						href="http://bandcamp.com"
-						target="_blank"><i class="fab fa-bandcamp"></i></a><a
+						target="_blank"><i class="fab fa-bandcamp"></i></a> --><a
 						title="Dimmu Saurus on Facebook"
 						href="https://www.facebook.com/dimmusaurus/"
 						target="_blank"><i class="fab fa-facebook-square"></i></a><a
