restored the track progress bar size while keeping it easily clickable; added demo styles file

--- a/src/index.html
+++ b/src/index.html
@@ -537,13 +537,16 @@
 			<div class="social">
 				<div class="social-label">Follow:</div>
 				<div class="social-icons">
-					<!-- <a
+					<a
+						class="bandcamp-link"
 						title="Dimmu Saurus Bandcamp page"
 						href="http://bandcamp.com"
-						target="_blank"><i class="fab fa-bandcamp"></i></a> --><a
+						target="_blank"><i class="fab fa-bandcamp"></i></a><a
+						class="facebook-link"
 						title="Dimmu Saurus on Facebook"
 						href="https://www.facebook.com/dimmusaurus/"
 						target="_blank"><i class="fab fa-facebook-square"></i></a><a
+						class="youtube-link"
 						title="Dimmu Saurus Youtube channel"
 						href="https://www.youtube.com/playlist?list=PLBugGYGZgZWcA8ePOBLDdyD1__D7WWxMI"
 						target="_blank"><i class="fab fa-youtube"></i></a>
@@ -578,7 +581,9 @@
 				<span class="progress-time">02:16</span>
 
 				<div class="track-progress-bar">
-					<div class="track-progress"></div>
+					<div class="track-progress-bar-background">
+						<div class="track-progress"></div>
+					</div>
 				</div>
 
 				<span class="total-time">10:38</span>
