the player is now hidden by default and displayed using JS for better browser compatibility

--- a/src/index.html
+++ b/src/index.html
@@ -29,12 +29,12 @@
 			integrity="sha256-+N4/V/SbAFiW1MPBCXnfnP9QSN3+Keu+NlB+0ev/YKQ="
 			crossorigin="anonymous">
 
-		<link rel="stylesheet" href="ds.min.css?version=36">
+		<link rel="stylesheet" href="ds.min.css?version=37">
 
-		<script src="ds.js?version=5"></script>
+		<script src="ds.js?version=6"></script>
 	</head>
 
-	<body>
+	<body class="unsupported-player">
 		<header>
 			<div class="header-container shadow-bottom">
 
