--- a/src/index.html
+++ b/src/index.html
@@ -29,9 +29,9 @@
 			integrity="sha256-+N4/V/SbAFiW1MPBCXnfnP9QSN3+Keu+NlB+0ev/YKQ="
 			crossorigin="anonymous">
 
-		<link rel="stylesheet" href="ds.min.css?version=37">
+		<link rel="stylesheet" href="ds.min.css?version=38">
 
-		<script src="ds.js?version=6"></script>
+		<script src="ds.min.js?version=7"></script>
 	</head>
 
 	<body class="unsupported-player">
