python backend - env setup + test page

--- a/src/demo.html
+++ b/src/demo.html
@@ -29,9 +29,9 @@
 			integrity="sha256-+N4/V/SbAFiW1MPBCXnfnP9QSN3+Keu+NlB+0ev/YKQ="
 			crossorigin="anonymous">
 
-		<link rel="stylesheet" href="ds.min.css?version=38">
+		<link rel="stylesheet" href="ds.css?version=39">
 
-		<script src="ds.min.js?version=7"></script>
+		<script src="ds.js?version=8"></script>
 	</head>
 
 	<body class="unsupported-player">
@@ -41,7 +41,7 @@
 				<div class="logo-text logo-text-left">Dimmu</div>
 
 				<div class="logo shadow-bottom">
-					<img src="img/logo/dimmu-saurus-250-krio.png" alt="Dimmu Saurus" />
+					<img src="img/dimmu-saurus-250-krio.png" alt="Dimmu Saurus" />
 				</div>
 
 				<div class="logo-text logo-text-right">Saurus</div>
