fixed links styles in news

--- a/src/demo.html
+++ b/src/demo.html
@@ -198,7 +198,7 @@
 
 				<h1 class="content-heading">Новини</h1>
 
-				<article>
+				<article class="news">
 					<h3 class="news-title">Нова песен - "Самотният старец край езерния бряг"</h3>
 					<h4>01.08.2017</h4>
 					<p>
@@ -206,14 +206,14 @@
 					</p>
 
 					<p>
-						<a class="tune-link" href="/музика/парчета/32-Самотният%20старец%20край%20езерния%20бряг">Самотният старец край
+						<a href="/музика/парчета/32-Самотният%20старец%20край%20езерния%20бряг">Самотният старец край
 						езерния бряг</a>
 					</p>
 				</article>
 
 				<hr>
 
-				<article>
+				<article class="news">
 					<h3 class="news-title">Lorem Ipsum</h3>
 					<h4>23.04.1521</h4>
 
@@ -222,13 +222,13 @@
 					<p>Donec semper libero sit amet auctor hendrerit. Mauris et tincidunt est. Aliquam egestas velit ipsum, ornare luctus nibh commodo laoreet. Fusce.</p>
 
 					<p>
-						<a class="tune-link" href="/музика/парчета/32-Самотният%20старец%20край%20езерния%20бряг">Mauris et tincidunt est</a>
+						<a href="/музика/парчета/32-Самотният%20старец%20край%20езерния%20бряг">Mauris et tincidunt est</a>
 					</p>
 				</article>
 
 				<hr>
 
-				<article>
+				<article class="news">
 					<h3 class="news-title">Lorem Ipsum</h3>
 					<h4>23.04.1521</h4>
 
@@ -237,7 +237,7 @@
 					<p>Donec semper libero sit amet auctor hendrerit. Mauris et tincidunt est. Aliquam egestas velit ipsum, ornare luctus nibh commodo laoreet. Fusce.</p>
 
 					<p>
-						<a class="tune-link" href="/музика/парчета/32-Самотният%20старец%20край%20езерния%20бряг">Mauris et tincidunt est</a>
+						<a href="/музика/парчета/32-Самотният%20старец%20край%20езерния%20бряг">Mauris et tincidunt est</a>
 					</p>
 				</article>
 			</div>
