--- a/src/demo.html
+++ b/src/demo.html
@@ -413,6 +413,13 @@
 							</a>
 						</li>
 
+
+						<li class="tune-youtube">
+							<a href="http://youtube.com" rel="me" target="_blank">
+								<i class="fab fa-youtube"></i><span>гледай</span>
+							</a>
+						</li>
+
 						<li class="tune-lyrics">
 							<a href="/lyrics">
 								<i class="fas fa-file-alt"></i><span>текст</span>
@@ -571,15 +578,18 @@
 						class="bandcamp-link"
 						title="Dimmu Saurus Bandcamp page"
 						href="http://bandcamp.com"
-						target="_blank"><i class="fab fa-bandcamp"></i></a><a
+						target="_blank"
+						rel="me"><i class="fab fa-bandcamp"></i></a><a
 						class="facebook-link"
 						title="Dimmu Saurus on Facebook"
 						href="https://www.facebook.com/dimmusaurus/"
-						target="_blank"><i class="fab fa-facebook-square"></i></a><a
+						target="_blank"
+						rel="me"><i class="fab fa-facebook-square"></i></a><a
 						class="youtube-link"
 						title="Dimmu Saurus Youtube channel"
 						href="https://www.youtube.com/playlist?list=PLBugGYGZgZWcA8ePOBLDdyD1__D7WWxMI"
-						target="_blank"><i class="fab fa-youtube"></i></a>
+						target="_blank"
+						rel="me"><i class="fab fa-youtube"></i></a>
 				</div>
 			</div>
 
