player: track selection and seeking made possible

--- a/src/demo.html
+++ b/src/demo.html
@@ -608,15 +608,14 @@
 
 
 		<div class="player shadow-top">
+			<audio></audio>
 			<a
 				id="pl-playlist-toggle"
 				href="javascript:;"
 				class="playlist"><i class="fas fa-chevron-up"></i></a>
 
 				<div class="track-title">
-					<a href="javascript:;">
 					Le temps de chasseurs est venu encore une fois
-					</a>
 				</div>
 
 			<div class="track-progress-bar-container">
