--- a/src/demo.html
+++ b/src/demo.html
@@ -641,7 +641,7 @@
 					class="fas fa-step-backward"
 					href="javascript:;"></a><a
 
-					onclick="Player.play()"
+					onclick="Player.playToggle()"
 					id="pl-play"
 					class="fas fa-play"
 					href="javascript:;"></a><a
