--- a/src/demo.html
+++ b/src/demo.html
@@ -608,7 +608,7 @@
 
 
 		<div class="player shadow-top">
-			<audio></audio>
+			<audio onended="Player.next()"></audio>
 			<a
 				id="pl-playlist-toggle"
 				href="javascript:;"
