--- a/src/demo.html
+++ b/src/demo.html
@@ -614,6 +614,10 @@
 				href="javascript:;"
 				class="playlist"><i class="fas fa-chevron-up"></i></a>
 
+				<div class="loading-indicator">
+					<i class="fas fa-sync-alt"></i>
+					Loading...
+				</div>
 				<div class="track-title">
 					Le temps de chasseurs est venu encore une fois
 				</div>
