ajax loading spinner

--- a/src/demo.html
+++ b/src/demo.html
@@ -105,21 +105,21 @@
 					<nav class="menu menu-language-choice menu-closed shadow-bottom">
 						<ul>
 							<li>
-								<a href="javascript:;">
+								<a href="javascript:;" hreflang="bg" rel="alternate">
 									<span class="icon flag flag-bg"></span>
 									Български
 								</a>
 							</li>
 
 							<li>
-								<a href="javascript:;">
+								<a href="javascript:;" hreflang="en" rel="alternate">
 									<span class="icon flag flag-en"></span>
 									English
 								</a>
 							</li>
 
 							<li>
-								<a href="javascript:;">
+								<a href="javascript:;" hreflang="fr" rel="alternate">
 									<span class="icon flag flag-fr"></span>
 									Français
 								</a>
@@ -657,6 +657,10 @@
 			</div>
 		</div>
 
-	</body>
+		<div class="ajax-loader">
+			<img src="img/vrtelejka.gif">
+			<span>Зареждане...</span>
+		</div>
 
+	</body>
 </html>
