--- a/src/demo.html
+++ b/src/demo.html
@@ -29,6 +29,10 @@
 			integrity="sha256-+N4/V/SbAFiW1MPBCXnfnP9QSN3+Keu+NlB+0ev/YKQ="
 			crossorigin="anonymous">
 
+		<link
+			rel="stylesheet"
+			href="ds.css">
+
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.2/axios.min.js"></script>
 
 		<script>
@@ -50,19 +54,20 @@
 
 
 			var js = document.createElement('script');
-			var css = document.createElement('link');
-			css.rel = 'stylesheet';
 
 			if (isOldBrowser()) {
 				js.src = 'ds.legacy.js';
+
+				var css = document.createElement('link');
+				css.rel = 'stylesheet';
 				css.href = 'ds.legacy.css';
+				document.head.appendChild(css);
 			} else {
 				js.src = 'ds.js';
-				css.href = 'ds.css';
 			}
 
 			document.head.appendChild(js);
-			document.head.appendChild(css);
+
 		</script>
 	</head>
 
