--- a/src/demo.html
+++ b/src/demo.html
@@ -16,7 +16,7 @@
 
 		<link
 			rel="stylesheet"
-			href="https://fonts.googleapis.com/css?family=Griffy|Noto+Sans:400,400i,700,700i&amp;display=swap&amp;subset=cyrillic">
+			href="https://fonts.googleapis.com/css?family=Griffy|Noto+Sans:400,400i,700,700i&amp;display=swap&amp;subset=cyrillic&amp;display=swap">
 
 		<link
 			rel="stylesheet"
@@ -24,7 +24,7 @@
 			integrity="sha256-+N4/V/SbAFiW1MPBCXnfnP9QSN3+Keu+NlB+0ev/YKQ="
 			crossorigin="anonymous">
 
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.2/axios.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.2/axios.min.js" async="async"></script>
 
 		<script>
 			function isOldBrowser() {
@@ -45,6 +45,7 @@
 
 
 			var js = document.createElement('script');
+			js.defer = 'defer';
 
 			if (isOldBrowser()) {
 				js.src = 'ds.legacy.js';
@@ -58,7 +59,6 @@
 			}
 
 			document.head.appendChild(js);
-
 		</script>
 	</head>
 
