hidden loading elements are hidden (even in text mode)

--- a/src/demo.html
+++ b/src/demo.html
@@ -606,7 +606,7 @@
 
 				<div class="loading-indicator">
 					<i class="fas fa-sync-alt"></i>
-					Loading...
+					<span class="label">Loading...</span>
 				</div>
 				<div class="track-title">
 					Le temps de chasseurs est venu encore une fois
@@ -646,8 +646,8 @@
 		</div>
 
 		<div class="ajax-loader">
-			<img src="img/vrtelejka.gif">
-			<span>Зареждане...</span>
+			<span class="spinner"></span>
+			<span class="label">Зареждане...</span>
 		</div>
 
 	</body>
