--- a/src/demo.html
+++ b/src/demo.html
@@ -574,17 +574,17 @@
 						title="Dimmu Saurus Bandcamp page"
 						href="http://bandcamp.com"
 						target="_blank"
-						rel="me"><i class="fab fa-bandcamp"></i></a><a
+						rel="me noopener"><i class="fab fa-bandcamp"></i></a><a
 						class="facebook-link"
 						title="Dimmu Saurus on Facebook"
 						href="https://www.facebook.com/dimmusaurus/"
 						target="_blank"
-						rel="me"><i class="fab fa-facebook-square"></i></a><a
+						rel="me noopener"><i class="fab fa-facebook-square"></i></a><a
 						class="youtube-link"
 						title="Dimmu Saurus Youtube channel"
 						href="https://www.youtube.com/playlist?list=PLBugGYGZgZWcA8ePOBLDdyD1__D7WWxMI"
 						target="_blank"
-						rel="me"><i class="fab fa-youtube"></i></a>
+						rel="me noopener"><i class="fab fa-youtube"></i></a>
 				</div>
 			</div>
 
