updated the copyright text in the footer to comply with the license

--- a/src/demo.html
+++ b/src/demo.html
@@ -592,7 +592,7 @@
 				<span class="copyright-copy">&copy;</span>
 				<span class="copyright-first-year">2004-</span>
 				<span class="copyright-last-year">2019</span>
-				<span class="copyright-ds">Димозавъръ</span>
+				<span class="copyright-ds">Димозавър</span>
 			</div>
 		</footer>
 
