updated the music license notice on the demo page too

--- a/src/demo.html
+++ b/src/demo.html
@@ -371,6 +371,13 @@
 					</div>
 
 				</div>
+
+				<hr>
+				<p class="license-notice">
+					<small>
+						All music is composed by Димозавър (Dimmu Saurus), except where noted. Download, play and share to help him become famous. Dimmu Saurus is not responsible for any damage to your speakers, house or trouble with neighbours which may result in playing his music too loud.
+					</small>
+				</p>
 			</div>
 
 			<div class="content content-tune">
