optimized loading spinners, especially the one in the player

--- a/src/demo.html
+++ b/src/demo.html
@@ -612,8 +612,8 @@
 				class="player-button playlist"><i class="fas fa-chevron-up"></i></button>
 
 				<div class="loading-indicator">
-					<i class="fas fa-sync-alt"></i>
-					<span class="label">Loading...</span>
+					<div class="player-loading-spinner"></div>
+					<div class="label">Loading...</div>
 				</div>
 				<div class="track-title">
 					Le temps de chasseurs est venu encore une fois
