time popup balloon when progress bar is hovered

--- a/src/demo.html
+++ b/src/demo.html
@@ -623,6 +623,13 @@
 				<span class="progress-time">02:16</span>
 
 				<div class="track-progress-bar">
+					<div class="time-balloon shadow-top-small">
+						<div class="time-balloon-time-wrapper">
+							<div class="time-balloon-time">03:15</div>
+						</div>
+						<div class="time-balloon-pointer"></div>
+					</div>
+
 					<div class="track-progress-bar-background">
 						<div class="track-progress"></div>
 					</div>
