--- a/src/demo.html
+++ b/src/demo.html
@@ -675,5 +675,10 @@
 			<span class="label">Зареждане...</span>
 		</div>
 
+		<div
+			id="scroll-to-top-button"
+			class="shadow-bottom button-scroll-to-top hidden"
+			onclick="Menu.scrollToTop()"><i class="fas fa-angle-up"></i></div>
+
 	</body>
 </html>
