translated the aria-labels

--- a/src/demo.html
+++ b/src/demo.html
@@ -667,7 +667,7 @@
 					class="player-button fas fa-step-backward"></button><button
 					id="pl-play"
 					title="Play / Pause"
-					aria-label="Play/Pause currenct song"
+					aria-label="Play/Pause current song"
 					onclick="Player.playToggle()"
 					class="player-button fas fa-play"></button><button
 					id="pl-next"
