--- a/src/demo.html
+++ b/src/demo.html
@@ -589,24 +589,21 @@
 				<div class="social-label">Follow:</div>
 				<div class="social-icons">
 					<a
-						class="bandcamp-link"
-						title="Dimmu Saurus Bandcamp page"
-						aria-label="Go to Dimmu Saurus Bandcamp page"
-						href="http://bandcamp.com"
-						target="_blank"
-						rel="me noopener"><i class="fab fa-bandcamp"></i></a><a
-						class="facebook-link"
 						title="Dimmu Saurus on Facebook"
 						aria-label="Go to Dimmu Saurus Facebook page"
 						href="https://www.facebook.com/dimmusaurus/"
 						target="_blank"
 						rel="me noopener"><i class="fab fa-facebook-square"></i></a><a
-						class="youtube-link"
 						title="Dimmu Saurus Youtube channel"
 						aria-label="Go to Dimmu Saurus Youtube channel"
 						href="https://www.youtube.com/playlist?list=PLBugGYGZgZWcA8ePOBLDdyD1__D7WWxMI"
 						target="_blank"
-						rel="me noopener"><i class="fab fa-youtube"></i></a>
+						rel="me noopener"><i class="fab fa-youtube"></i></a><a
+						title="Dimmu Saurus Soundcloud page"
+						aria-label="Go to Dimmu Saurus Soundcloud page"
+						href="https://soundcloud.com/beeuisri12mz"
+						target="_blank"
+						rel="me noopener"><i class="fab fa-soundcloud"></i></a>
 				</div>
 			</div>
 
