--- a/src/demo.html
+++ b/src/demo.html
@@ -308,67 +308,72 @@
 							<i class="fas fa-compact-disc"></i>
 						</div>
 
-						<ol class="album-tracks">
-							<li>
-								<a class="track-title" href="/%D0%BC%D1%83%D0%B7%D0%B8%D0%BA%D0%B0/%D0%BF%D0%B0%D1%80%D1%87%D0%B5%D1%82%D0%B0/27-%D0%96%D1%8A%D0%BB%D1%82%D0%B8%D1%8F%D1%82%20%D0%B1%D0%BB%D1%83%D1%81"> Жълтият блус </a>
+						<div class="album-tracks">
+							<ol>
+								<li>
+									<a class="track-title" href="/%D0%BC%D1%83%D0%B7%D0%B8%D0%BA%D0%B0/%D0%BF%D0%B0%D1%80%D1%87%D0%B5%D1%82%D0%B0/27-%D0%96%D1%8A%D0%BB%D1%82%D0%B8%D1%8F%D1%82%20%D0%B1%D0%BB%D1%83%D1%81"> Жълтият блус </a>
 
-									<span class="track-length"> 3:25 </span>
-							</li>
+										<span class="track-length"> 3:25 </span>
+								</li>
 
-							<li>
-								<a class="track-title" href="/%D0%BC%D1%83%D0%B7%D0%B8%D0%BA%D0%B0/%D0%BF%D0%B0%D1%80%D1%87%D0%B5%D1%82%D0%B0/28-%D0%9C%D0%B5%D0%B7%D0%B5%D1%82%D0%B0%20%D0%B2%20%D0%BA%D0%B8%D0%BB%D0%B8%D1%8F%D1%82%D0%B0"> Мезета в килията </a>
+								<li>
+									<a class="track-title" href="/%D0%BC%D1%83%D0%B7%D0%B8%D0%BA%D0%B0/%D0%BF%D0%B0%D1%80%D1%87%D0%B5%D1%82%D0%B0/28-%D0%9C%D0%B5%D0%B7%D0%B5%D1%82%D0%B0%20%D0%B2%20%D0%BA%D0%B8%D0%BB%D0%B8%D1%8F%D1%82%D0%B0"> Мезета в килията </a>
 
-									<span class="track-length"> 3:25 </span>
-							</li>
+										<span class="track-length"> 3:25 </span>
+								</li>
 
-							<li>
-								<a class="track-title" href="/%D0%BC%D1%83%D0%B7%D0%B8%D0%BA%D0%B0/%D0%BF%D0%B0%D1%80%D1%87%D0%B5%D1%82%D0%B0/29-Extraordinary%20kitchen%20blues"> Extraordinary kitchen blues </a>
+								<li>
+									<a class="track-title" href="/%D0%BC%D1%83%D0%B7%D0%B8%D0%BA%D0%B0/%D0%BF%D0%B0%D1%80%D1%87%D0%B5%D1%82%D0%B0/29-Extraordinary%20kitchen%20blues"> Extraordinary kitchen blues </a>
 
-									<span class="track-length"> 2:49 </span>
-							</li>
+										<span class="track-length"> 2:49 </span>
+								</li>
 
-							<li>
-								<a class="track-title" href="/%D0%BC%D1%83%D0%B7%D0%B8%D0%BA%D0%B0/%D0%BF%D0%B0%D1%80%D1%87%D0%B5%D1%82%D0%B0/31-%D0%97%D0%BB%D0%B8%D1%8F%20%D0%BF%D0%B5%D1%81"> Злия пес </a>
+								<li>
+									<a class="track-title" href="/%D0%BC%D1%83%D0%B7%D0%B8%D0%BA%D0%B0/%D0%BF%D0%B0%D1%80%D1%87%D0%B5%D1%82%D0%B0/31-%D0%97%D0%BB%D0%B8%D1%8F%20%D0%BF%D0%B5%D1%81"> Злия пес </a>
 
-									<span class="track-length"> 4:39 </span>
-							</li>
+										<span class="track-length"> 4:39 </span>
+								</li>
 
-							<li>
-								<a class="track-title" href="/%D0%BC%D1%83%D0%B7%D0%B8%D0%BA%D0%B0/%D0%BF%D0%B0%D1%80%D1%87%D0%B5%D1%82%D0%B0/32-%D0%A1%D0%B0%D0%BC%D0%BE%D1%82%D0%BD%D0%B8%D1%8F%D1%82%20%D1%81%D1%82%D0%B0%D1%80%D0%B5%D1%86%20%D0%BA%D1%80%D0%B0%D0%B9%20%D0%B5%D0%B7%D0%B5%D1%80%D0%BD%D0%B8%D1%8F%20%D0%B1%D1%80%D1%8F%D0%B3"> Самотният старец край езерния бряг </a>
+								<li>
+									<a class="track-title" href="/%D0%BC%D1%83%D0%B7%D0%B8%D0%BA%D0%B0/%D0%BF%D0%B0%D1%80%D1%87%D0%B5%D1%82%D0%B0/32-%D0%A1%D0%B0%D0%BC%D0%BE%D1%82%D0%BD%D0%B8%D1%8F%D1%82%20%D1%81%D1%82%D0%B0%D1%80%D0%B5%D1%86%20%D0%BA%D1%80%D0%B0%D0%B9%20%D0%B5%D0%B7%D0%B5%D1%80%D0%BD%D0%B8%D1%8F%20%D0%B1%D1%80%D1%8F%D0%B3"> Самотният старец край езерния бряг </a>
 
-								<span class="track-length"> 12:42 </span>
-							</li>
+									<span class="track-length"> 12:42 </span>
+								</li>
 
-							<li>
-								<a class="track-title" href="/%D0%BC%D1%83%D0%B7%D0%B8%D0%BA%D0%B0/%D0%BF%D0%B0%D1%80%D1%87%D0%B5%D1%82%D0%B0/27-%D0%96%D1%8A%D0%BB%D1%82%D0%B8%D1%8F%D1%82%20%D0%B1%D0%BB%D1%83%D1%81"> Жълтият блус </a>
+								<li>
+									<a class="track-title" href="/%D0%BC%D1%83%D0%B7%D0%B8%D0%BA%D0%B0/%D0%BF%D0%B0%D1%80%D1%87%D0%B5%D1%82%D0%B0/27-%D0%96%D1%8A%D0%BB%D1%82%D0%B8%D1%8F%D1%82%20%D0%B1%D0%BB%D1%83%D1%81"> Жълтият блус </a>
 
-									<span class="track-length"> 3:25 </span>
-							</li>
+										<span class="track-length"> 3:25 </span>
+								</li>
 
-							<li>
-								<a class="track-title" href="/%D0%BC%D1%83%D0%B7%D0%B8%D0%BA%D0%B0/%D0%BF%D0%B0%D1%80%D1%87%D0%B5%D1%82%D0%B0/28-%D0%9C%D0%B5%D0%B7%D0%B5%D1%82%D0%B0%20%D0%B2%20%D0%BA%D0%B8%D0%BB%D0%B8%D1%8F%D1%82%D0%B0"> Мезета в килията </a>
+								<li>
+									<a class="track-title" href="/%D0%BC%D1%83%D0%B7%D0%B8%D0%BA%D0%B0/%D0%BF%D0%B0%D1%80%D1%87%D0%B5%D1%82%D0%B0/28-%D0%9C%D0%B5%D0%B7%D0%B5%D1%82%D0%B0%20%D0%B2%20%D0%BA%D0%B8%D0%BB%D0%B8%D1%8F%D1%82%D0%B0"> Мезета в килията </a>
 
-									<span class="track-length"> 3:25 </span>
-							</li>
+										<span class="track-length"> 3:25 </span>
+								</li>
 
-							<li>
-								<a class="track-title" href="/%D0%BC%D1%83%D0%B7%D0%B8%D0%BA%D0%B0/%D0%BF%D0%B0%D1%80%D1%87%D0%B5%D1%82%D0%B0/29-Extraordinary%20kitchen%20blues"> Extraordinary kitchen blues </a>
+								<li>
+									<a class="track-title" href="/%D0%BC%D1%83%D0%B7%D0%B8%D0%BA%D0%B0/%D0%BF%D0%B0%D1%80%D1%87%D0%B5%D1%82%D0%B0/29-Extraordinary%20kitchen%20blues"> Extraordinary kitchen blues </a>
 
-									<span class="track-length"> 2:49 </span>
-							</li>
+										<span class="track-length"> 2:49 </span>
+								</li>
 
-							<li>
-								<a class="track-title" href="/%D0%BC%D1%83%D0%B7%D0%B8%D0%BA%D0%B0/%D0%BF%D0%B0%D1%80%D1%87%D0%B5%D1%82%D0%B0/31-%D0%97%D0%BB%D0%B8%D1%8F%20%D0%BF%D0%B5%D1%81"> Злия пес </a>
+								<li>
+									<a class="track-title" href="/%D0%BC%D1%83%D0%B7%D0%B8%D0%BA%D0%B0/%D0%BF%D0%B0%D1%80%D1%87%D0%B5%D1%82%D0%B0/31-%D0%97%D0%BB%D0%B8%D1%8F%20%D0%BF%D0%B5%D1%81"> Злия пес </a>
 
-									<span class="track-length"> 4:39 </span>
-							</li>
+										<span class="track-length"> 4:39 </span>
+								</li>
 
-							<li>
-								<a class="track-title" href="/%D0%BC%D1%83%D0%B7%D0%B8%D0%BA%D0%B0/%D0%BF%D0%B0%D1%80%D1%87%D0%B5%D1%82%D0%B0/32-%D0%A1%D0%B0%D0%BC%D0%BE%D1%82%D0%BD%D0%B8%D1%8F%D1%82%20%D1%81%D1%82%D0%B0%D1%80%D0%B5%D1%86%20%D0%BA%D1%80%D0%B0%D0%B9%20%D0%B5%D0%B7%D0%B5%D1%80%D0%BD%D0%B8%D1%8F%20%D0%B1%D1%80%D1%8F%D0%B3"> Самотният старец край езерния бряг </a>
+								<li>
+									<a class="track-title" href="/%D0%BC%D1%83%D0%B7%D0%B8%D0%BA%D0%B0/%D0%BF%D0%B0%D1%80%D1%87%D0%B5%D1%82%D0%B0/32-%D0%A1%D0%B0%D0%BC%D0%BE%D1%82%D0%BD%D0%B8%D1%8F%D1%82%20%D1%81%D1%82%D0%B0%D1%80%D0%B5%D1%86%20%D0%BA%D1%80%D0%B0%D0%B9%20%D0%B5%D0%B7%D0%B5%D1%80%D0%BD%D0%B8%D1%8F%20%D0%B1%D1%80%D1%8F%D0%B3"> Самотният старец край езерния бряг </a>
 
-								<span class="track-length"> 12:42 </span>
-							</li>
-						</ol>
+									<span class="track-length"> 12:42 </span>
+								</li>
+							</ol>
+							<div class="album-duration-container">
+								<div class="album-duration-separator">51:06</div>
+							</div>
+						</div>
 					</div>
 
 				</div>
