fixed incorrect album track alignment on small screens

--- a/src/demo.html
+++ b/src/demo.html
@@ -371,7 +371,7 @@
 								</li>
 							</ol>
 							<div class="album-duration-container">
-								<div class="album-duration-separator">51:06</div>
+								<div class="album-duration-label">51:06</div>
 							</div>
 						</div>
 					</div>
