added a track info link next to each song in the playlist

--- a/src/demo.html
+++ b/src/demo.html
@@ -502,88 +502,102 @@
 
 				<ul id="playlist-list">
 					<li>
-						<a class="menu-item" onclick="Player.selectTrack(666)">
+						<div class="menu-item" onclick="Player.selectTrack(666)">
 							<span class="playlist-title">Патката бяла</span>
 							<span class="playlist-time">10:23</span>
-						</a>
+							<a href="/track/666" class="playlist-info fas fa-info-circle"></a>
+						</div>
 					</li>
 					<li>
-						<a class="menu-item" onclick="Player.selectTrack(666)" class="selected">
+						<div class="menu-item" onclick="Player.selectTrack(666)" class="selected">
 							<span class="playlist-title">Баба меца си изгуби кеца</span>
 							<span class="playlist-time">1:23</span>
-						</a>
+							<a href="/track/666" class="playlist-info fas fa-info-circle"></a>
+						</div>
 					</li>
 					<li>
-						<a class="menu-item" onclick="Player.selectTrack(666)">
+						<div class="menu-item" onclick="Player.selectTrack(666)">
 							<span class="playlist-title">Кондю яде спанак</span>
 							<span class="playlist-time">1:23</span>
-						</a>
+							<a href="/track/666" class="playlist-info fas fa-info-circle"></a>
+						</div>
 					</li>
 					<li>
-						<a class="menu-item" onclick="Player.selectTrack(666)">
+						<div class="menu-item" onclick="Player.selectTrack(666)">
 							<span class="playlist-title">Don't leave me, Kage, you played the best shit you've ever fucking played</span>
 							<span class="playlist-time">10:23</span>
-						</a>
+							<a href="/track/666" class="playlist-info fas fa-info-circle"></a>
+						</div>
 					</li>
 					<li>
-						<a class="menu-item" onclick="Player.selectTrack(666)">
+						<div class="menu-item" onclick="Player.selectTrack(666)">
 							<span class="playlist-title">Има марулка, има трушийка и ще пийнем ракийка</span>
 							<span class="playlist-time">1:23</span>
-						</a>
+							<a href="/track/666" class="playlist-info fas fa-info-circle"></a>
+						</div>
 					</li>
 					<li>
-						<a class="menu-item" onclick="Player.selectTrack(666)">
+						<div class="menu-item" onclick="Player.selectTrack(666)">
 							<span class="playlist-title">Да изорем дружно нивите, момчета!</span>
 							<span class="playlist-time">1:23</span>
-						</a>
+							<a href="/track/666" class="playlist-info fas fa-info-circle"></a>
+						</div>
 					</li>
 					<li>
-						<a class="menu-item" onclick="Player.selectTrack(666)">
+						<div class="menu-item" onclick="Player.selectTrack(666)">
 							<span class="playlist-title">Ох вел</span>
 							<span class="playlist-time">1:23</span>
-						</a>
+							<a href="/track/666" class="playlist-info fas fa-info-circle"></a>
+						</div>
 					</li>
 					<li>
-						<a class="menu-item" onclick="Player.selectTrack(666)">
+						<div class="menu-item" onclick="Player.selectTrack(666)">
 							<span class="playlist-title">Коньовишки жентълмен</span>
 							<span class="playlist-time">1:23</span>
-						</a>
+							<a href="/track/666" class="playlist-info fas fa-info-circle"></a>
+						</div>
 					</li>
 					<li>
-						<a class="menu-item" onclick="Player.selectTrack(666)">
+						<div class="menu-item" onclick="Player.selectTrack(666)">
 							<span class="playlist-title">жунгла е тука</span>
 							<span class="playlist-time">1:23</span>
-						</a>
+							<a href="/track/666" class="playlist-info fas fa-info-circle"></a>
+						</div>
 					</li>
 					<li>
-						<a class="menu-item" onclick="Player.selectTrack(666)">
+						<div class="menu-item" onclick="Player.selectTrack(666)">
 							<span class="playlist-title">дай му жега с паста за зъби корега</span>
 							<span class="playlist-time">1:23</span>
-						</a>
+							<a href="/track/666" class="playlist-info fas fa-info-circle"></a>
+						</div>
 					</li>
 					<li>
-						<a class="menu-item" onclick="Player.selectTrack(666)">
+						<div class="menu-item" onclick="Player.selectTrack(666)">
 							<span class="playlist-title">аре ве, докога ще пиша, не стана ли достатъчно високо това?</span>
 							<span class="playlist-time">10:23</span>
-						</a>
+							<a href="/track/666" class="playlist-info fas fa-info-circle"></a>
+						</div>
 					</li>
 					<li>
-						<a class="menu-item" onclick="Player.selectTrack(666)">
+						<div class="menu-item" onclick="Player.selectTrack(666)">
 							<span class="playlist-title">Небостъргач ли строим тука?</span>
 							<span class="playlist-time">1:23</span>
-						</a>
+							<a href="/track/666" class="playlist-info fas fa-info-circle"></a>
+						</div>
 					</li>
 					<li>
-						<a class="menu-item" onclick="Player.selectTrack(666)">
+						<div class="menu-item" onclick="Player.selectTrack(666)">
 							<span class="playlist-title">и осван това ми писна от тая песен, дето я слушам</span>
 							<span class="playlist-time">1:23</span>
-						</a>
+							<a href="/track/666" class="playlist-info fas fa-info-circle"></a>
+						</div>
 					</li>
 					<li>
-						<a class="menu-item" onclick="Player.selectTrack(666)">
+						<div class="menu-item" onclick="Player.selectTrack(666)">
 							<span class="playlist-title">Фред Герлах си пускам - Банат</span>
 							<span class="playlist-time">1:23</span>
-						</a>
+							<a href="/track/666" class="playlist-info fas fa-info-circle"></a>
+						</div>
 					</li>
 				</ul>
 			</div>
