optimized external css and fonts loading speed (now using Google Fonts API v2)

--- a/src/demo.html
+++ b/src/demo.html
@@ -15,15 +15,15 @@
 			rel="stylesheet"
 			href="ds.css">
 
-		<link
-			rel="stylesheet"
-			href="https://fonts.googleapis.com/css?family=Griffy|Noto+Sans:400,400i,700,700i&amp;display=swap&amp;subset=cyrillic&amp;display=swap">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Griffy&display=swap&text=DimuSars" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 
 		<link
 			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css"
 			integrity="sha256-+N4/V/SbAFiW1MPBCXnfnP9QSN3+Keu+NlB+0ev/YKQ="
-			crossorigin="anonymous">
+			crossorigin>
 
 		<script>
 			function isOldBrowser() {
