.content-wrapper -> #content-container

--- a/src/demo.html
+++ b/src/demo.html
@@ -174,7 +174,7 @@
 
 		</header>
 
-		<div class="content-wrapper">
+		<div id="content-container">
 			<div class="content content-home">
 				<article>
 					<h1 class="content-heading">Home Page</h1>
