.unsupported-player -> .no-player

--- a/src/demo.html
+++ b/src/demo.html
@@ -63,7 +63,7 @@
 		</script>
 	</head>
 
-	<body class="unsupported-player">
+	<body class="no-player">
 		<header>
 			<div class="header-container shadow-bottom">
 
