simplified build process to minimize the discrepancy between the UI demo and the Django site

--- a/src/demo.html
+++ b/src/demo.html
@@ -13,7 +13,7 @@
 
 		<link
 			rel="stylesheet"
-			href="ds.css">
+			href="py/static/ds.css">
 
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Griffy&display=swap&text=DimuSars" rel="stylesheet">
@@ -26,8 +26,8 @@
 			crossorigin>
 
 		<script
-			src="detect-old-browser.js"
-			onload="loadResources('ds.js', 'ds.legacy.js', 'ds.legacy.css');"
+			src="py/main/templates/main/detect-old-browser.js"
+			onload="loadResources('py/static/ds.js', 'py/static/ds.legacy.js', 'py/static/ds.legacy.css');"
 		></script>
 	</head>
 
